# huangjijingshi

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
books/: DOWNLOAD.md  README.md
frontend/: en.html  index.html  pro.html  tieban.html
frontend/cn/: bazi.html  index.html  pro.html  tieban.html
frontend/en/: index.html  pro.html  tieban.html
src/: __init__.py
src/analysis/: __init__.py  ai_interpreter.py  cycle_analyzer.py  history_validator.py  trend_engine.py
src/api/: __init__.py  app.py  schemas.py
src/api/routes/: analysis.py  bazi.py  chat.py  extended.py  hexagram.py  history.py  tieban.py
src/core/: __init__.py  audio.py  bazi.py  changhe.py  hexagram.py  huangji_algorithm.py  solar_terms.py  tiangan_dizhi.py  tieban.py  zhubi_algorithm.py
src/data/: bazi_advanced.py  ganzhi_relations.py  guanwu_history.py  hexagram_texts.py  history_events.py  interpretations.py  tieban_benming.py  tieban_tables.py  tieban_tiaowen.py  translations.py  wuxing.py
tests/: test_hexagram.py  test_huangji.py
