[project]
name = "huangjijingshi"
version = "0.1.0"
description = "皇极经世推演系统 - 基于邵雍《皇极经世书》的世界发展规律推演算法平台"
readme = "README.md"
requires-python = ">=3.9"
license = "Apache-2.0 WITH Commons-Clause"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.34.0",
    "pydantic==2.10.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.4",
    "pytest-asyncio==0.24.0",
    "httpx==0.28.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
